changed logging to rotatingfilehandler

--- a/server/logging.config
+++ b/server/logging.config
@@ -2,36 +2,42 @@
 keys=root,kiru,dbpool,dnsquery
 
 [handlers]
-keys=consoleHandler
+keys=rotatingHandler
 
 [formatters]
 keys=simpleFormatter
 
 [logger_root]
-level=DEBUG
-handlers=consoleHandler
+level=INFO
+handlers=rotatingHandler
 
 [logger_kiru]
-level=DEBUG
-handlers=consoleHandler
+level=INFO
+handlers=rotatingHandler
 qualname=kiru
 propagate=0
 
 [logger_dbpool]
-level=DEBUG
-handlers=consoleHandler
+level=INFO
+handlers=rotatingHandler
 qualname=kiru
 propagate=0
 
 [logger_dnsquery]
-level=DEBUG
-handlers=consoleHandler
+level=INFO
+handlers=rotatingHandler
 qualname=kiru
 propagate=0
 
+[handler_rotatingHandler]
+class=handlers.RotatingFileHandler
+level=NOTSET
+args=('kiru.log','a',2000,100)
+formatter=simpleFormatter
+
 [handler_consoleHandler]
 class=StreamHandler
-level=DEBUG
+level=INFO
 formatter=simpleFormatter
 args=(sys.stdout,)
 
