--- a/server/logging.config
+++ b/server/logging.config
@@ -20,13 +20,13 @@ propagate=0
 [logger_dbpool]
 level=INFO
 handlers=rotatingHandler
-qualname=kiru
+qualname=dbpool
 propagate=0
 
 [logger_dnsquery]
 level=INFO
 handlers=rotatingHandler
-qualname=kiru
+qualname=dnsquery
 propagate=0
 
 [handler_rotatingHandler]
