modified rotating file config

--- a/server/logging.config
+++ b/server/logging.config
@@ -32,7 +32,7 @@ propagate=0
 [handler_rotatingHandler]
 class=handlers.RotatingFileHandler
 level=NOTSET
-args=('kiru.log','a',2000,100)
+args=('kiru.log','a',1000000,5)
 formatter=simpleFormatter
 
 [handler_consoleHandler]
